[project]
name = "read-book-and-answer-questions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.115.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=4.0.0",
    "docx2txt>=0.8",
    "chromadb>=0.6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "PyQt6>=6.6.0",
    "langdetect>=1.0.9",
    "matplotlib>=3.11.0",
    "duckduckgo-search>=6.0.0",
]
